src/app/globals.css
body {
  margin: 0;
  padding: 0;
  text-align: center;
  font-family: var(--font-work-sans);

  background-color: rgba(11, 70, 56);

  max-width: 100vw;
  overflow-x: hidden;
  position: relative;

  min-height: 100vh;

  @media (min-width: 800px) {
    align-items: center;
  }
}

header {
  position: absolute;
  z-index: 1;
  width: 300px;
  top: 20px;

  @media (min-width: 800px) {
    width: 400px;
    top: 30px;
  }

  @media (min-width: 1000px) {
    width: 500px;
  }
}

.header-enter {
  animation: dropdownBounce 1s ease-out forwards;
  animation-delay: 1s;
  transform: translateY(-400%);
}
.header-leave {
  animation: dropOut 0.4s ease-in forwards;
  transform: translateY(-5%);
}

.header-animation {
  animation: jelly 1s ease-out forwards;
  transform: translateY(-400%);
}
@keyframes jelly {
  0% {
    transform: scale(1);
  }
  25% {
    transform: scale(1.1);
  }
  50% {
    transform: scale(1);
  }
  75% {
    transform: scale(1.05);
  }
  100% {
    transform: scale(1);
  }
}

@keyframes dropdownBounce {
  0% {
    transform: translateY(-100%);
  }
  25% {
    transform: translateY(0);
  }
  50% {
    transform: translateY(-10%);
  }
  75% {
    transform: translateY(0);
  }
  100% {
    transform: translateY(-5%);
  }
}

@keyframes dropOut {
  0% {
    transform: translateY(0);
  }
  100% {
    transform: translateY(-200%);
  }
}

.win {
  animation: win 1.5s ease-in-out forwards;
}

@keyframes win {
  0% {
    transform: scale(1) translateX(0);
  }
  10% {
    transform: scale(1.2) translateX(0);
  }
  20% {
    transform: scale(1) translateX(-10px);
  }
  30% {
    transform: scale(1) translateX(10px);
  }
  40% {
    transform: scale(1) translateX(-8px);
  }
  50% {
    transform: scale(1) translateX(8px);
  }
  60% {
    transform: scale(1) translateX(-6px);
  }
  70% {
    transform: scale(1) translateX(6px);
  }
  80% {
    transform: scale(1) translateX(-4px);
  }
  90% {
    transform: scale(1) translateX(4px);
  }
  100% {
    transform: scale(1) translateX(0);
  }
}

.greenpeace {
  bottom: 20px;
  position: absolute;
  z-index: 0;
  left: 50%;
  transform: translateX(-50%);
}

.greenpeace img {
  max-width: 50vw;
  height: auto;
}

